src/components/Intro/_Intro.less
.Intro {
  position: relative;
  overflow: hidden;
}

.Intro-backgroundImage {
  position: absolute;
//  min-height: 300px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  background-image: url('../images/front.png');
  -webkit-filter: blur(5px);
  -moz-filter: blur(5px);
  -o-filter: blur(5px);
  -ms-filter: blur(5px);
  filter: blur(5px);
  margin: -10px;
}

.Intro-image,
.Intro-content {
  color: #fff;
  position: relative;
  z-index: 10;
}

.Intro-promos {
  clear: both;
  position: relative;
  z-index: 10;
  margin-left: -30px;
  margin-right: -30px;
  margin-top: 30px;

  &.Panel {
    border-radius: 0;
    margin-bottom: -30px;
  }
}


.Intro-content-text {
  font-size: 25px;
  line-height: 1.8;
  margin: 0;
}

.Intro-content-text-partial {
  display: inline-block;
  padding: 0 25px 0 20px;
  margin: 3px 0;
  background-color: rgba(red(@ndr-blue), green(@ndr-blue), blue(@ndr-blue), 0.8);
}

.Intro-content-text-partial--heading {
  font-weight: 400;
}

